syntax = "proto3";
package cudoventures.cudosnode.marketplace;

option go_package = "github.com/CudoVentures/cudos-node/x/marketplace/types";

message Nft {
  uint64 id = 1;
  string tokenId = 2; 
  string denomId = 3; 
  string price = 4;
  string owner = 5;
}
